[package]
name = "advent-of-code"
version = "0.0.1"
authors = [ "Andrew Rink <andrewrink@gmail.com>" ]

[[bin]]
name = "day1"
path = "src/day1/day1.rs"

[[bin]]
name = "day2"
path = "src/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/day3/day3.rs"

[[bin]]
name = "day4"
path = "src/day4/day4.rs"

[[bin]]
name = "day5"
path = "src/day5/day5.rs"

[[bin]]
name = "day6"
path = "src/day6/day6.rs"

[[bin]]
name = "day7"
path = "src/day7/day7.rs"

[[bin]]
name = "day8"
path = "src/day8/day8.rs"

[[bin]]
name = "day9"
path = "src/day9/day9.rs"

[[bin]]
name = "day10"
path = "src/day10/day10.rs"

[[bin]]
name = "day11"
path = "src/day11/day11.rs"

[[bin]]
name = "day12"
path = "src/day12/day12.rs"

[[bin]]
name = "day13"
path = "src/day13/day13.rs"

[dependencies]
clap = "1.5.3"
rust-crypto = "0.2.34"
regex = "0.1.43"
rustc-serialize = "0.3"
#clippy = "0.0.30"
